--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,12 @@
 <h1>Hello I am New Layout File</h1>
+
+<section id="feed-posts">
+    <h4>Posts</h4>
+    <form action="" id="new-post-form" method="POST">
+
+        <textarea name="content" cols="30" rows="3"></textarea>
+        <input type="submit" value="post">
+
+    </form>
+
+</section>
