--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,11 +2,29 @@
 
 <section id="feed-posts">
     <h4>Posts</h4>
-    <form action="" id="new-post-form" method="POST">
+    <form action="/posts/create" id="new-post-form" method="POST">
 
-        <textarea name="content" cols="30" rows="3"></textarea>
-        <input type="submit" value="post">
+        <textarea name="content" cols="30" rows="3" placeholder="Type Here Your Post"></textarea>
+        <input type="submit" value="Post">
 
     </form>
+
+    <div id="posts-list">
+
+        <ul>
+            <% for(post of posts) { %>
+            <li><P>
+                <%= post.content %>
+                <br>
+                <small>
+                    <%= post.user.name %>
+                </small>
+            </P>
+                
+            </li>
+            <% } %>
+        </ul>
+
+    </div>
 
 </section>
