--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,5 +1,8 @@
 body{
     margin: 0;
-    background-color: antiquewhite;
+    /* text-align: center; */
 
+    #layout-main{
+        height: 100%;
+    }
 }
