--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,30 +1,43 @@
-<h1>Hello I am New Layout File</h1>
+<link rel="stylesheet" href="/css/home.css">
 
-<section id="feed-posts">
-    <h4>Posts</h4>
-    <form action="/posts/create" id="new-post-form" method="POST">
+<div id="home-container">
 
-        <textarea name="content" cols="30" rows="3" placeholder="Type Here Your Post"></textarea>
-        <input type="submit" value="Post">
 
-    </form>
-
-    <div id="posts-list">
-
-        <ul>
-            <% for(post of posts) { %>
-            <li><P>
-                <%= post.content %>
-                <br>
-                <small>
-                    <%= post.user.name %>
-                </small>
-            </P>
-                
-            </li>
-            <% } %>
-        </ul>
-
-    </div>
-
-</section>
+    <section id="feed-posts">
+        <h4>Posts</h4>
+        <% if(locals.user){ %>
+        <form action="/posts/create" id="new-post-form" method="POST">
+    
+            <textarea name="content" cols="30" rows="3" placeholder="Type Here Your Post"></textarea>
+            <input type="submit" value="Post">
+    
+        </form>
+        <% } %>
+        
+    
+        <div id="posts-list-container">
+    
+            <ul>
+                <% for(post of posts) { %>
+                <%- include('_post') -%>
+                <% } %>
+            </ul>
+    
+        </div>
+    
+    </section>
+    
+    <section id="user_friends">
+    
+        <h4>Friends</h4>
+    
+        <% for(u of all_users) { %>
+    
+            <p>
+                <a href="/users/profile/<%= u.id %>"><%= u.name %></a>
+            </p>
+    
+        <% } %>
+    
+    </section>
+</div>
