--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,20 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title %></title>
-    <link rel="stylesheet" href="/css/layout.css">
-    <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/footer.css">
-    <%- style %>
-</head>
-<body>
+<html>
+    <head>
+        <title>
+            <%= title  %>
+        </title>
+        <link rel="stylesheet" href="/css/layout.css">
+        <link rel="stylesheet" href="/css/header.css">
+        <link rel="stylesheet" href="/css/footer.css">
 
-    <%- include('_header'); %>
-    <%- body %>
-    <%- include('_footer'); %>
+        <%- style %>
+        
+    </head>
 
-    <%- script %>
-</body>
+    <body>
+        <%- include('_header'); %>
+
+        <% if(flash.success && flash.success.length > 0){ %>
+            <h5>
+                <%= flash.success %>
+            </h5>
+        <% } %>
+        
+        <main id="layout-main">
+            <%- body %>
+
+        </main>
+
+
+        <%- include('_footer'); %>
+
+        <%- script %>
+        
+    </body>
 </html>
