--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,8 +1,8 @@
-<li>
+<li id="post-<%= post._id %>">
     <p>
         <% if (locals.user && locals.user.id == post.user.id){ %>
         <small>
-            <a href="/posts/destroy/<%= post.id %>">X</a>
+            <a class="delete-post-button" href="/posts/destroy/<%= post.id %>">X</a>
         </small>
         <% } %>
         <%= post.content %>
@@ -10,6 +10,20 @@
         <small>
             <%= post.user.name %>
         </small>
+
+<br>
+<small>
+    <% if(locals.user){ %>
+        <a class="toggle-like-button" data-likes="<%= post.likes.length %>" href="/likes/toggle/?id=<%=post._id%>&type=Post">
+            <%= post.likes.length %> Likes
+        </a>
+    <% } else { %>
+        <%= post.likes.length %> Likes
+        <% } %>
+</small>
+
+
+
     </p>
     <div class="post-comments">
         <% if (locals.user){ %>
